--- a/delensing.ini
+++ b/delensing.ini
@@ -1,6 +1,6 @@
-*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*
-*  CLASS input parameter file  *
-*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*
+###*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*
+###*  CLASS input parameter file  *
+###*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*
 
 
 ###############################
@@ -23,7 +23,7 @@
 ###############################
 delensing = yes
 ##
-## note you have to add the below CLASS options to calculate delensing accurately
+## note you have to add the below CLASS options to calculate delensing accurately (note the dlCl option added for calculating the delensed spectra)
 ##
 output = tCl,pCl,lCl,dlCl
 accurate_lensing = 1
@@ -34,6 +34,7 @@ lensing = yes
 ##
 l_max_scalars = 5000
 delta_l_max = 1500
+### note: for reference, accurate delensing requires delta_l_max > 1500 when l_max = 5000.
 
 ###########\\##//##############
 ###### Selecting CMB noise
