--- a/delensing.ini
+++ b/delensing.ini
@@ -21,7 +21,7 @@
 ## if delensing = yes : performs delensing once
 ## if delensing = iterative : performs iterative delensing until spectra converge 
 ###############################
-delensing = yes
+delensing = iterative
 ##
 ## note you have to add the below CLASS options to calculate delensing accurately (note the dlCl option added for calculating the delensed spectra)
 ##
