--- a/delensing.ini
+++ b/delensing.ini
@@ -146,9 +146,9 @@ derv_binedges = 1
 ## note: at the moment delensing verbose serves more for debugging.
 delensing_verbose = 3
 ##
-## buffer between the lensed spectra and delensed spectra
+## buffer between the lensed spectra and delensed spectra (unused at the moment)
 ##
-delta_dl_max = 1000
+delta_dl_max = 0
 ##
 
 ## otherwise use the standard CLASS options described in explainatory.ini
